# LOX-Interpreter

./: CMakeLists.txt  LICENSE  README.md  main.cc  version.h.in
Examples/: basic_arithmetic.lox  basic_arithmetic.txt  basic_comparison.lox  basic_var.lox  basic_var_arithmetic.lox  hello_world.lox
Grammer/: all.lox  closure.lox  deep_closure.lox  deep_recursion.lox  fibonaci.lox  for.lox  function.lox  function_env.lox  function_env_error.lox  if.lox  if_else.lox  if_else_if_else.lox  print.lox  programm.lox  return_from_function.lox  returned_function.lox  var.lox  var_no_initial.lox  while.lox
src/: CMakeLists.txt  environment.cc  expression.cc  function.cc  interpreter.cc  object.cc  object_visitor.cc  operator_strategy.cc  parser.cc  scanner.cc  statement.cc  token.cc  value.cc
src/include/: environment.h  expression.h  function.h  interpreter.h  object.h  object_visitor.h  operator_strategy.h  parser.h  scanner.h  statement.h  token.h  value.h
test/: CMakeLists.txt  test_environment.cc  test_expression.cc  test_interpreter.cc  test_object.cc  test_operator_strategy.cc  test_parser.cc  test_scanner.cc  test_token.cc  test_value.cc
